# MC949-Visao-Computacional

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
data/T1/processed/: processed.txt
data/T2/interim/estatua/: etapa3_results.pkl
data/T2/results/: dense.ply
data/interim/: interim.txt
data/raw/: raw.txt
data/raw/FotosICMural/: README.txt
notebooks/: S1-1.0-jevs-flann.ipynb  S2-1.0-esm-feature-extraction.ipynb  S3-1.0-vmrg-brute-force-matcher.ipynb  S5-1.0-esm-360-panorama.ipynb  S5-1.0-esm-automatic-order.ipynb  S5-1.0-mgl-blending.ipynb
notebooks/T1/: S1-1.0-jevs-flann.ipynb  S3-1.0-vmrg-brute-force-matcher.ipynb  S5-1.0-esm-automatic-order.ipynb
notebooks/T2/: S1-1.0-esm-video-sampling.ipynb  S3-1.0-hpbv-epipolar-geometry.ipynb  S4-1.0-esm-3d-reconstruction.ipynb  teste copy.ipynb
src/: .gitignore  pyproject.toml  src.txt
src/canon/: config.py  download_data.py
src/canon/T1/plotting/: plotting.py
src/canon/T1/process/: automatic_ordering.py  panorama.py  recursive_panorama.py
src/canon/T2/: main.py
src/canon/T2/plotting/: visualization.py
src/canon/T2/process/: epipolar_geometry.py  feature_extraction.py  reconstruction_3d.py
src/canon/T2/utils/: image_utils.py
src/canon/utils/: image_utils.py
src/src/: .gitignore
src/src.egg-info/: SOURCES.txt
src/src/process/: automatic_ordering.py  feature_extraction.py  panorama.py  recursive_panorama.py
src/src/src.egg-info/: PKG-INFO  SOURCES.txt
src/src/utils/: image_utils.py  imageutils.py  notebook_utils.py
venv310/Scripts/: activate  activate.bat  jsonpointer
(+4 files in other folders)
